# docker-dns

./: .gitignore  Dockerfile-test-healthcheck  LICENSE  Makefile  README.md  check_docker_ipv6_support.py  docker-dns-entrypoint.sh  docker-dns.py  dockerDNS.py  pyproject.toml  requirements-dev.txt  requirements.txt
dockerDNS/: __init__.py  dockerDNS.py
tests/: __main__.py  test_dockerDNS.py
tests/e2e/: test_dockerDNS.py
