[tool.poetry]
name = "docker-dns"
version = "0.6.0"
description = "A DNS server for docker containers"
authors = ["Daniel Gonçalves <daniel.gonc@lves.fr>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
Twisted = "^22.10.0"
docker = "^4.3.1"

[tool.poetry.dev-dependencies]
dnslib = "^0.9.17"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
